# curso_numpy_python

./: Curso_NumPy_Exercícios_NÃO_RESOLVIDOS_Salvar_carregar_arrays.ipynb  Curso_NumPy_Exercícios_RESOLVIDOS_Salvar_carregar_arrays.ipynb  README.md  ndarray_atributos.ipynb  pyproject.toml
Arrays Preenchidos/: Curso_NumPy_Exercícios_NÃO_resolvidos_Criando_arrays_preenchidos.ipynb  Curso_NumPy_Exercícios_RESOLVIDOS_Criando_arrays_preenchidos.ipynb  arrays_preenchidos.ipynb
Estatistíca/: Curso_NumPy_Exercícios_NÃO_RESOLVIDOS_Estatística.ipynb  Curso_NumPy_Exercícios_RESOLVIDOS_Estatística.ipynb  estatistica.ipynb
Funções Universais/: Curso_NumPy_Exercícios_NÃO_RESOLVIDOS_Funções_universais.ipynb  Curso_NumPy_Exercícios_RESOLVIDOS_Funções_universais.ipynb  Untitled.ipynb
Funções de indexação/: Curso_NumPy_Exercícios_NÃO_RESOLVIDOS_Funções_de_indexação.ipynb  Curso_NumPy_Exercícios_RESOLVIDOS_Funções_de_indexação.ipynb  funcoes_indexacao.ipynb
Funções de manipulação/: Agrupamento_dividindo_array.ipynb  Curso_NumPy_Exercícios_NÃO_RESOLVIDOS_Funções_de_manipulação.ipynb  Curso_NumPy_Exercícios_RESOLVIDOS_Funções_de_manipulação.ipynb
Indexing, slicing e assigning/: Curso_NumPy_Exercícios_NÃO_Resolvidos_Indexing,_slicing,_assigning.ipynb  Curso_NumPy_Exercícios_RESOLVIDOS_Indexing,_slicing,_assigning.ipynb  indexing_slicing_assigning.ipynb
Métodos/: Curso_NumPy_Exercícios_NÃO_RESOLVIDOS_Métodos_[1].ipynb  Curso_NumPy_Exercícios_NÃO_resolvidos_Métodos_[2].ipynb  Curso_NumPy_Exercícios_RESOLVIDOS_Métodos_[1].ipynb  Curso_NumPy_Exercícios_RESOLVIDOS_Métodos_[2].ipynb  (+1 more)
(+9 files in other folders)
